# flux-tensor-midi

./: .gitignore  AGENTS.md  ASSEMBLY-GUIDE.md  BETA-TEST-SYNTHESIS.md  CROSS-POLLINATION-SYNTHESIS.md  Cargo.toml  ECOSYSTEM-MAP.md  FLEET-COORDINATION-PROTOCOL.md  FLEET-STRATEGIC-AUDIT.md  FLUX-SYNTHESIS.md  GETTING-STARTED.md  HEARTBEAT.md  MODULE-MAP.md  PLATO-BOOT-CAMP.md  README.md  ROADMAP.md  SIGNAL-CHAIN-REVIEW.md  SWARM-THREE-HYPOTHESIS.md  SYNERGY.md  THE-UNIFIED-PROOF.md  TOOLS.md  UNIFIED-CORE-DESIGN.md  beta-test-final-v2.md  beta-test-final.md  beta-test-js.md  beta-test-newcomer.md  beta-test-python-v2.md  beta-test-python.md  beta-test-rust.md  beta-test-signal-chain.md  cocapn-org-readme.md  conductor_demo.py  experiment_results.json  penrose.py  pyproject.toml  quickstart.sh  spline_synth.py  spreader-tool-assessment.md  test_flux_cuda  test_flux_cuda.cu  (+1 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md
.inbox/: state.json
.keeper/: forge-alert.txt  forge-watch.json  heartbeat.json  keeper-response.json
CODE/: experiment_playtest_matrix.py
ai-forest/: README.md
archive/: README.md
autodata-integration/: README.md
bootcamp/: README.md
captains-log/: README.md
constraint-theory-core-cuda/: Cargo.toml  README.md
coq-unified/: .Eisenstein.aux  .Laman.aux  .Theorems.aux  .lia.cache  .nra.cache  Eisenstein.glob  Eisenstein.v  Eisenstein.vo  Laman.glob  Laman.v  Laman.vo  README.md  Theorems.glob  Theorems.v  Theorems.vo  _CoqProject
deadband-algol/: NOTES.md  deadband.alg
deadband-c/: Makefile  bench_opt  benchmark_optimized.c  benchmark_v2  benchmark_v2.c  bma.c  bma_word.c  bma_word_fix.patch  deadband.c  deadband.h  div360.c  eisenstein.c  eisenstein_avx2.c  fib_spline.c  hpdf.c  hpdf_fast.c  shell.c  test_bma_fix  test_bma_fix.c  test_bma_verify  test_bma_verify.c  test_bma_word  test_deadband  test_deadband.c
deadband-cobol/: DEADBAND.COB  TESTDB.COB
deadband-constrained/: BACK-TRANSLATION-ANALYSIS.md  MASTER-COMPARISON.md  README.md  package-lock.json  package.json
deadband-cuda/: Makefile  benchmark.cu  benchmark_v2.cu  deadband_check.cu  deadband_cuda.h  eisenstein_snap.cu  horizontal_states  horizontal_states.cu  hpdf_batch.cu  hpdf_dither.cu  mega_benchmark  mega_benchmark.cu  optimized_kernels  optimized_kernels.cu  swarm_shared.cu  swarm_sim.cu
deadband-fortran/: Makefile  bench  benchmark.f90  deadband.f90  deadband.mod  test_deadband  test_deadband.f90
deadband-mojo/: deadband.mojo  test_deadband.mojo
deadband-python/: README.md  benchmark.py  setup.py  test_deadband.py
deadband-rs/: Cargo.toml  README.md
deadband-tutor/: deadband.tut
deadband-vedic/: COMPILER-EXTENSION-DESIGN.md  NOVEL-LANGUAGE-IDEAS.md  ऋत.md  मृतपट्ट-परीक्षा.ved  मृतपट्ट.ved
deadband-wenyan/: COMPILER-EXTENSION-DESIGN.md
deadband-zig/: bench.zig  build.zig  deadband.zig
discussions/: README.md
docs/: DEVELOPER-GUIDE.md  README.md  ROADMAP.md  USER-GUIDE.md
dojo/: README.md
editors/: README.md
examples/: basic_musician.py  chord_detection.py  duet.py  eisenstein_snap.py  side_channels.py
experiments/: ANALYSIS-EPSILON-SWEEP.md  E2-RERUN-RESULTS.md  E6-INFO-THEORETIC.md  E6_results_v2.json  EXPERIMENT-CONDUCTOR.json  EXPERIMENT-CROSS-SYSTEM.json  EXPERIMENT-CROSS-SYSTEM.md  EXPERIMENT-EPSILON-SWEEP.json  EXPERIMENT-FEEDBACK-LOOPS.json  EXPERIMENT-LONG-EVOLUTION.json  EXPERIMENT-REAL-RESULTS.json  experiment_conductor.py  experiment_cross_system.py  experiment_epsilon_sweep.py  experiment_feedback_loops.py  experiment_long_evolution.py  experiment_real_systems.py  experiment_resonance_apps.py  experiment_stress_creativity.py  results_resonance_apps.txt
fleet-gateway/: README.md
fleet-optimization/: atlas-builder.py  fleet-agent.py  fleet-optimization-protocol.md  meta-verifier.py
fleet-simulation/: README.md  simulate_fleet.py
flux-check/: README.md  pyproject.toml
flux-check/flux_check/: __init__.py  core.py  presets.py
flux-check/tests/: test_core.py
flux-compiler-workspace/: README.md
flux-contracts/: README.md
flux-deploy/: README.md
flux-docs/: Makefile  README.md  faq.md  getting-started.md  index.md
flux-esp32/: README.md
flux-genome/: README.md  pyproject.toml
flux-genome/flux_genome/: __init__.py  constraints.py  engine.py
flux-genome/tests/: test_genome.py
flux-hardware/: Cargo.toml
flux-hyperbolic/: README.md  pyproject.toml
flux-sdk-python/: README.md
flux-tensor-midi/python/: pyproject.toml
flux-tensor-midi/python/flux_tensor_midi/adapters/: __init__.py  daw_bridge.py
flux-tensor-midi/python/flux_tensor_midi/core/: clock.py  flux.py  prerender.py  room.py  snap.py
flux-tensor-midi/python/flux_tensor_midi/ensemble/: band.py  score.py
flux-tensor-midi/python/flux_tensor_midi/harmony/: chord.py  jaccard.py  spectrum.py
flux-tensor-midi/python/flux_tensor_midi/midi/: channel.py  clock.py  events.py
flux-tensor-midi/python/flux_tensor_midi/sidechannel/: frown.py  nod.py  smile.py
flux-tools/: README.md
flux-verify-api/: Cargo.toml
flux_tensor_midi/: __init__.py  __main__.py  analyzer.py  beta_testing.py  conductor.py  constraint_impedance.py  constraint_repair.py  creative_engine.py  ecosystem.py  embryonic.py  exceptions.py  gene_regulatory.py  genome_music.py  genre_brain.py  hyperbolic_genre.py  immune_system.py  living.py  midi_writer.py  neural_music.py  string_resonance.py  tracks.py
flywheel/: README.md
fm-research/: HYPERBOLIC-MUSIC-ROUTING.md
for-fleet/: 2026-05-18-cross-pollination-synthesis.i2i  2026-05-23-forgemaster-to-kimi1.i2i  README.md
from-fleet/: README.md
frontends/: README.md
galois_retrieval/: README.md
gpu-experiments/: README.md
gpu-kernels/: README.md
guard-constraints/: README.md
holonomy-bounded/: README.md
i2i/: README.md
integration_tests/: __init__.py  conftest.py  test_drum_to_arrangement.py  (+3 more)
spectral-conservation/: Cargo.toml  README.md
spectral-conservation/review/: AUDIT.md
spectral-conservation/src/: lib.rs
spectral-conservation/tests/: integration.rs
(+268 files in other folders)
