[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-genome"
version = "0.1.0"
description = "Genomic constraint analysis — apply constraint theory to DNA/RNA sequences"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Casey Digennaro", email = "casey@superinstance.com"}]
keywords = ["genomics", "constraints", "dna", "rna", "bioinformatics", "gc-content", "codon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/SuperInstance/flux-lib-py"
Repository = "https://github.com/SuperInstance/flux-lib-py"

[tool.setuptools.packages.find]
include = ["flux_genome*"]
