[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-tensor-midi"
version = "0.1.2"
description = "PLATO rooms as musicians — tensor-based MIDI event generation with Eisenstein rhythm snapping"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FLUX-Tensor-MIDI contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "mido>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["flux_tensor_midi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
